# casper-node

./: Dockerfile  Makefile  flake.nix  vm2-build-contracts.sh
binary_port/: Cargo.toml
binary_port/src/: binary_request.rs  error_code.rs  information_request.rs  key_prefix.rs  response_type.rs
execution_engine/: Cargo.toml
execution_engine/src/engine_state/: error.rs  execution_kind.rs  mod.rs  wasm_v1.rs
execution_engine/src/execution/: error.rs  executor.rs
execution_engine/src/resolvers/: mod.rs  v1_function_index.rs  v1_resolver.rs
execution_engine/src/runtime/: auction_internal.rs  externals.rs  handle_payment_internal.rs  mint_internal.rs  mod.rs  utils.rs  wasm_prep.rs
execution_engine/src/runtime_context/: mod.rs  tests.rs
execution_engine_testing/test_support/src/: lib.rs  (+6 more)
execution_engine_testing/tests/: Cargo.toml
executor/wasm-common/: Cargo.toml
executor/wasm-host/: Cargo.toml
executor/wasm-host/src/: abi.rs  context.rs  host.rs  system.rs
node/: Cargo.toml
node/src/: cli.rs  data_migration.rs  effect.rs  reactor.rs  testing.rs  types.rs
resources/local/: chainspec.toml.in  config.toml
resources/production/: chainspec.toml  config-example.toml
resources/test/: rest_schema_status.json  sse_data_schema.json
smart_contracts/contracts/test/recover-secp256k1/: Cargo.toml
smart_contracts/contracts/test/recover-secp256k1/src/: main.rs
smart_contracts/contracts/test/staking/: Cargo.toml
smart_contracts/contracts/test/staking-stored/: Cargo.toml
smart_contracts/contracts/test/staking-stored/src/: main.rs
smart_contracts/contracts/test/staking/src/: lib.rs
smart_contracts/contracts/test/verify-signature/: Cargo.toml
smart_contracts/contracts/test/verify-signature/src/: main.rs
storage/: Cargo.toml
storage/src/: data_access_layer.rs  global_state.rs  lib.rs
types/: CHANGELOG.md  Cargo.toml
types/benches/: bytesrepr_bench.rs
types/src/: access_rights.rs  addressable_entity.rs  api_error.rs  auction_state.rs  block.rs  bytesrepr.rs  chainspec.rs  cl_value.rs  contracts.rs  crypto.rs  gens.rs  key.rs  lib.rs  package.rs  runtime_footprint.rs  stored_value.rs  transaction.rs
utils/validation/: Cargo.toml
(+300 files in other folders)
