[package]
name = "verify-signature"
version = "0.1.0"
authors = ["Igor Bunar <igor@casper.network>"]
edition = "2021"

[[bin]]
name = "verify_signature"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { path = "../../../contract" }
casper-types = { path = "../../../../types" }
